# flashcards-core

./: .gitignore  README.md  database.html  genindex.html  index.html  models.html  py-modindex.html  schedulers.html  search.html  searchindex.js  setup.cfg  setup.py  sqlite_dev.db  study.html
.github/: stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_docs.sh  codeql.yml  docs.yml  tests.yml
_sources/: schedulers.rst.txt
docs/: database.html  objects.inv  requirements.txt
docs/_sources/: database.rst.txt
docs/source/: conf.py  database.rst  index.rst  models.rst  schedulers.rst  study.rst
flashcards_core/: errors.py  guid.py  spaced_repetition.py  study.py
flashcards_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flashcards_core/algorithm_engines/: __init__.py  base.py  random.py
flashcards_core/database/: __init__.py  algorithm_params.py  algorithms.py  cards.py  crud.py  decks.py  export.py  exporter.py  faces.py  facts.py  importer.py  reviews.py  tags.py
flashcards_core/database/models/: cards.py  decks.py  facts.py  reviews.py  tags.py
flashcards_core/schedulers/: __init__.py  base.py  random.py
tests/: conftest.py  test_database_cards.py  test_database_crud.py  test_database_decks.py  test_database_export.py  test_database_exporter.py  test_database_facts.py  test_database_importer.py  test_database_reviews.py  test_database_tags.py  test_random.py  test_schedulers_helpers_and_base.py  test_schedulers_random.py  test_study.py
wheels/: flashcards_core-0.0.1-py3-none-any.whl
